Fixed tree height overflow. Nav bar now stays in view

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body {
 	background: #f2f2f2;
+    padding-top: 45px; 
 }
 
 html, body {
@@ -71,18 +72,20 @@ color:#fff;
 .side-menu {
     float: left;
     max-width: 160px;
-    margin: 0;
     padding: 1em;
     height: 100%;
+    width: 160px;
+    position: fixed;
 }
 
 .main-content {
-    border-left: 1px solid gray;
-    padding: 1em;
-    height: 100%;
-    width: 100%;
-}
 
+    padding: 1em;
+    margin-left: 100px;
+    margin-right: 0;
+    height: 100%;
+
+}
 
 .hamburger{
   background:none;
